--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -3,16 +3,16 @@
     <nz-tab [nzTitle]="'账户密码登录'">
       <nz-alert *ngIf="error" [nzType]="'error'" [nzMessage]="error" [nzShowIcon]="true" class="mb-lg"></nz-alert>
       <nz-form-item>
-        <nz-form-control nzErrorTip="Please enter mobile number, muse be: admin or user">
+        <nz-form-control nzErrorTip="Please enter mobile username">
           <nz-input-group nzSize="large" nzPrefixIcon="user">
-            <input type="text" nz-input formControlName="userName" placeholder="username: admin or user" />
+            <input type="text" nz-input formControlName="userName" placeholder="username or email" />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-control nzErrorTip="Please enter password, muse be: ng-alain.com">
+        <nz-form-control nzErrorTip="Please enter password">
           <nz-input-group nzSize="large" nzPrefixIcon="lock">
-            <input nz-input type="password" formControlName="password" placeholder="password: ng-alain.com" />
+            <input nz-input type="password" formControlName="password" placeholder="password" />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
@@ -61,8 +61,9 @@
 </form>
 <div class="other">
   其他登录方式
-  <i nz-tooltip nzTooltipTitle="in fact Auth0 via window" (click)="open('auth0', 'window')" nz-icon nzType="alipay-circle" class="icon"></i>
-  <i nz-tooltip nzTooltipTitle="in fact Github via redirect" (click)="open('github')" nz-icon nzType="taobao-circle" class="icon"></i>
-  <i (click)="open('weibo', 'window')" nz-icon nzType="weibo-circle" class="icon"></i>
+  <i nz-tooltip nzTooltipTitle="Login via github" (click)="open('github', 'window')" nz-icon nzType="github" class="icon"></i>
+  <i nz-tooltip nzTooltipTitle="Login via fido2" (click)="open('smile', 'window')" nz-icon nzType="smile" class="icon"></i>
+  <i nz-tooltip nzTooltipTitle="Login via qrcode" (click)="open('smile', 'window')" nz-icon nzType="qrcode" class="icon"></i>
+
   <a class="register" routerLink="/passport/register">注册账户</a>
 </div>
