可以运行ng框架了

--- a/src/app/routes/widgets/widgets/widgets.component.html
+++ b/src/app/routes/widgets/widgets/widgets.component.html
@@ -655,7 +655,7 @@
       <div nz-col [nzSpan]="8" class="text-right">
         <span
           nz-popconfirm
-          [(nzPopconfirmVisible)]="like"
+          [nzPopconfirmVisible]="like"
           [nzPopconfirmPlacement]="'top'"
           [nzPopconfirmTitle]="'喜欢就开启此内容提醒吧！'"
           [nzOkText]="'立即开启'"
