--- a/src/app/routes/note/editor/editor.component.less
+++ b/src/app/routes/note/editor/editor.component.less
@@ -1,6 +1,33 @@
-.left-div{
-  width: 500px;
-  height: 1000px;
-  position: fixed;
+/**
+copy:https://vuepress.vuejs.org/ MIT License
+*/
+.sidebar {
+  position: absolute;
+  top: 20rem;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  display: block;
+  font-size: 16px;
+  width: 20rem;
+  z-index: 10;
+  margin: 0;
 
+  border-right: 1px solid #eaecef;
+  overflow-y: auto;
+  scrollbar-width: thin;
+
+  background-color: #fff;
+
+}
+nz-input-group {
+
+}
+.main{
+  background-color: red;
+}
+#vditor{
+
+  height: 100%;
 }
