编辑框宽度

--- a/src/app/routes/note/editor/editor.component.less
+++ b/src/app/routes/note/editor/editor.component.less
@@ -18,11 +18,11 @@ copy:https://vuepress.vuejs.org/ MIT License
   overflow-y: auto;
   scrollbar-width: thin;
 
-  background-color: #fff;
+
 
 }
 nz-input-group {
-
+ width: 100%;
 }
 .main{
   background-color: red;
