--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -6,7 +6,7 @@
         <img class="logo" src="./assets/logo-color.svg" />
         <span class="title">ng-alain</span>
       </div>
-      <div class="desc">知识、博客、分享、协作</div>
+      <div class="desc">文档、知识、博客、分享、协作</div>
 
     </div>
     <router-outlet></router-outlet>
