--- a/src/app/routes/pro/account/settings/security/security.component.html
+++ b/src/app/routes/pro/account/settings/security/security.component.html
@@ -42,17 +42,16 @@
 
   <nz-list-item [nzActions]="[fido2Op]">
     <ng-template #fido2Op>
-      <a >绑定</a>
+      <a (click)="OnBindFIDO2()">绑定</a>
     </ng-template>
     <nz-list-item-meta nzTitle="FIDO2 设备" [nzDescription]="fdio2Desc">
       <ng-template #fdio2Desc>
-        未绑定 FIDO2 设备，绑定后，可以使用FIDO2设备认证登录,支持设备: Yubikey,WindowsHello,任何支持FIDO2协议的安全令牌<br>
+        未绑定 FIDO2 设备，绑定后，可以使用FIDO2设备认证登录,支持: Yubikey、WindowsHello、支持FIDO2协议的安全令牌<br>
         <ul>
           <li  *ngFor="let key_id of fido2list.keys(),index as i" >
               {{fido2list.get(key_id)}}---- <a (click)="unBindFIDO2(key_id)">解绑</a>
           </li>
         </ul>
-
       </ng-template>
     </nz-list-item-meta>
   </nz-list-item>
