--- a/src/app/routes/dashboard/workplace/workplace.component.html
+++ b/src/app/routes/dashboard/workplace/workplace.component.html
@@ -51,7 +51,7 @@
       class="ant-card__body-nopadding mb-lg project-list"
     >
       <ng-template #ingExtra>
-        <a (click)="msg.success('to')">全部项目</a>
+        <a (click)="OnAllProject()">全部项目</a>
       </ng-template>
       <div *ngFor="let item of notice" nz-card-grid class="project-grid">
         <nz-card [nzBordered]="false" class="ant-card__body-nopadding mb0">
