--- a/src/app/routes/dashboard/workplace/workplace.component.html
+++ b/src/app/routes/dashboard/workplace/workplace.component.html
@@ -44,14 +44,14 @@
 <div nz-row [nzGutter]="24">
   <div nz-col nzXs="24" nzSm="24" nzMd="16">
     <nz-card
-      nzTitle="进行中的项目"
+      nzTitle="概览"
       [nzExtra]="ingExtra"
       [nzBordered]="false"
       [nzLoading]="loading"
       class="ant-card__body-nopadding mb-lg project-list"
     >
       <ng-template #ingExtra>
-        <a (click)="OnAllProject()">全部项目</a>
+        <a (click)="OnAllProject()">全部仓库</a>
       </ng-template>
       <div *ngFor="let item of notice" nz-card-grid class="project-grid">
         <nz-card [nzBordered]="false" class="ant-card__body-nopadding mb0">
