--- a/src/app/routes/pro/account/center/documents/documents.component.html
+++ b/src/app/routes/pro/account/center/documents/documents.component.html
@@ -6,7 +6,7 @@
 >
   <ng-template #item let-item>
     <nz-list-item>
-      <nz-card nzHoverable [nzActions]="[op1, op2, op3, op4]">
+      <nz-card  nzHoverable [nzActions]="[op1, op2, op3, op4]">
         <ng-template #op1>
           <i nz-tooltip nzTooltipTitle="下载" nz-icon nzType="download"></i>
         </ng-template>
@@ -27,21 +27,21 @@
             </ul>
           </nz-dropdown-menu>
         </ng-template>
-        <nz-card-meta [nzTitle]="item.Name" [nzAvatar]="nzAvatar">
+        <nz-card-meta  (click)="OnCardClick(item)"  [nzTitle]="item.Name" [nzAvatar]="nzAvatar">
           <ng-template #nzAvatar>
-            <nz-avatar nzSize="small" [nzSrc]="item.Avatar"></nz-avatar>
+            <nz-avatar   nzSize="small" [nzSrc]="item.Avatar"></nz-avatar>
           </ng-template>
         </nz-card-meta>
-        <div class="card-info d-flex">
+        <div class="card-info d-flex" >
           <div>
-            <p>活跃用户</p>
+            <p>收藏</p>
             <p>
               {{ item.StarCounter }}
               <em class="wan">万</em>
             </p>
           </div>
           <div>
-            <p>新增用户</p>
+            <p>被引用</p>
             <p>{{ item.ForkCounter | number: '3.' }}</p>
           </div>
         </div>
