--- a/src/app/routes/pro/form/create-repository/create-repository-form.component.html
+++ b/src/app/routes/pro/form/create-repository/create-repository-form.component.html
@@ -6,8 +6,8 @@
         nz-input
         formControlName="title"
         autocomplete="off"
-        [(ngModel)]="repositoryName"
-        (ngModelChange)="OnRepositoryNameChange()"
+        formControlName="repositoryName"
+        (ngModelChange)="OnRepositoryNameChange($event)"
         placeholder="请输入仓库名称（仅允许使用英文、数字，不允许含特殊符号和中文）"/>
     </se>
     <se label="归属" error="请输入标题" required>
@@ -16,7 +16,7 @@
           <nz-select formControlName="owner"
                      nzShowSearch nzAllowClear
                      nzPlaceHolder="选择用户或组织"
-                     [(ngModel)]="selectedOwner"
+
                      *ngFor="let item of ownerOptionArray">
             <nz-option nzCustomContent [nzLabel]="item" [nzValue]="item" >
               <i nz-icon nzType="plus"></i>
@@ -28,22 +28,22 @@
           <em style="text-align: center;vertical-align:center;font-size: 2rem;line-height: 0.8;">/</em>
         </div>
         <div nz-col nzFlex="auto">
-          <input nz-input formControlName="path"  placeholder="仓库访问地址（纯英文数字，不包含特殊符号）" [(ngModel)]="repositoryPath"/>
+          <input nz-input formControlName="path" readonly  placeholder="仓库访问地址（纯英文数字，不包含特殊符号）" [(ngModel)]="repositoryPath"/>
         </div>
       </div>
     </se>
 
     <se label="仓库描述">
-      <textarea nz-input formControlName="goal" [nzAutosize]="{ minRows: 4 }" placeholder="用简洁的话描述一下"></textarea>
+      <textarea nz-input formControlName="description"  [nzAutosize]="{ minRows: 4 }" placeholder="用简洁的话描述一下"></textarea>
     </se>
     <se label="初始化动作">
-      <label nz-checkbox [(ngModel)]="checked">初始化文件夹</label>
-      <label nz-checkbox [(ngModel)]="checked">初始化欢迎文档</label>
-      <label nz-checkbox [(ngModel)]="checked">初始化使用手册文档</label>
+      <label  nz-checkbox >初始化文件夹</label>
+      <label  nz-checkbox >初始化欢迎文档</label>
+      <label  nz-checkbox >初始化使用手册文档</label>
     </se>
 
     <se label="仓库模板">
-      <nz-select nzShowSearch nzAllowClear nzPlaceHolder="选择仓库生成模板" [(ngModel)]="selectedRepositoryTemplate">
+      <nz-select  formControlName="selectedRepositoryTemplate"  nzShowSearch nzAllowClear nzPlaceHolder="选择仓库生成模板" >
         <nz-option nzCustomContent nzLabel="内置默认模板" nzValue="default">
           <i nz-icon nzType="plus"></i>
           内置默认模板
@@ -52,7 +52,7 @@
     </se>
 
     <se label="可见性" extra="被邀请者默认被分享">
-      <nz-radio-group formControlName="public">
+      <nz-radio-group formControlName="public" (ngModelChange)="OnVisibleChange($event)" >
         <label nz-radio [nzValue]="1">私有</label>
         <label nz-radio [nzValue]="2">公开</label>
         <label nz-radio [nzValue]="3">部分公开</label>
@@ -71,8 +71,8 @@
       </nz-mention>
 
     </se>
-    <se label="CC协议"   extra="知识共享许可协议简称为 CC，是一种公共著作权许可协议，选择CC协议将允许其他人分发您拥有著作权保护的作品。">
-      <nz-select nzShowSearch nzAllowClear nzPlaceHolder="选择开源协议" [(ngModel)]="selectedLicense">
+    <se label="CC协议"  f extra="知识共享许可协议简称为 CC，是一种公共著作权许可协议，选择CC协议将允许其他人分发您拥有著作权保护的作品。">
+      <nz-select  formControlName="selectedLicense"  nzShowSearch nzAllowClear nzPlaceHolder="选择开源协议" >
         <nz-option nzCustomContent nzLabel="private 私有" nzValue="private">
           <i nz-icon nzType="plus"></i> private 私有。
         </nz-option>
@@ -99,6 +99,7 @@
     <se label="邀评人" extra="邀评人将有权读取您的仓库">
       <nz-mention [nzSuggestions]="suggestions" (nzOnSelect)="onSelect($event)">
         <input
+          formControlName="suggestions"
           placeholder="请直接 @姓名／id，最多可邀请 5 人"
           nzMentionTrigger
           nz-input
@@ -110,7 +111,7 @@
     </se>
     <se>
       <button nz-button nzType="primary" [disabled]="form.invalid" type="submit" [nzLoading]="submitting">提交</button>
-      <button nz-button class="ml-sm">保存</button>
+
     </se>
   </form>
 </nz-card>
