--- a/src/app/routes/note/editor/editor.component.less
+++ b/src/app/routes/note/editor/editor.component.less
@@ -19,8 +19,9 @@ copy:https://vuepress.vuejs.org/ MIT License
   scrollbar-width: thin;
 
 
-
-
+}
+nz-tree-node{
+  overflow: hidden;
 }
 nz-input-group {
  width: 100%;
