--- a/src/app/routes/pro/form/create-repository/create-repository-form.component.html
+++ b/src/app/routes/pro/form/create-repository/create-repository-form.component.html
@@ -10,7 +10,7 @@
         autocomplete="off"
         formControlName="repositoryName"
         (ngModelChange)="OnRepositoryNameChange($event)"
-        placeholder="请输入仓库名称（仅允许使用英文、数字，不允许含特殊符号和中文）"/>
+        placeholder="请输入仓库名称（建议使用英文、数字，不允许含特殊符号和中文）"/>
     </se>
     <se label="归属" error="请输入标题" required>
       <div nz-row>
