--- a/src/app/routes/dashboard/workplace/workplace.component.html
+++ b/src/app/routes/dashboard/workplace/workplace.component.html
@@ -16,7 +16,7 @@
         <nz-avatar nzSrc="https://gw.alipayobjects.com/zos/rmsportal/lctvVCLfRpYCkYxAsiVQ.png"></nz-avatar>
       </div>
       <div class="desc">
-        <div class="desc-title">早安，山治，我要吃肉！</div>
+        <div class="desc-title">早安，{{userToken.Username}}，我要吃肉！</div>
         <div>假砖家 | 地球－伟大航道－黄金梅丽号－厨房－小强部门</div>
       </div>
     </div>
