--- a/src/app/my-components/MyModal/re-name-modal-component/input-modal.component.html
+++ b/src/app/my-components/MyModal/re-name-modal-component/input-modal.component.html
@@ -1,13 +1,12 @@
 <nz-modal
   [(nzVisible)]="isVisible"
-  nzTitle="重命名"
+  [nzTitle]="title"
   (nzOnCancel)="handleCancel()"
   (nzOnOk)="handleOk()"
   [nzOkLoading]="isOkLoading"
 >
   <div *nzModalContent>
-    <input nz-input placeholder="Basic usage" [(ngModel)]="value"/>
+    <input nz-input [placeholder]="placeholder" [(ngModel)]="value"/>
   </div>
-
 </nz-modal>
 
