--- a/src/app/routes/note/editor/editor.component.html
+++ b/src/app/routes/note/editor/editor.component.html
@@ -51,8 +51,8 @@
               <li nz-submenu nzTitle="新建">
                 <ul>
                   <li nz-menu-item (click)="onCreateNotebook($event)">文件夹</li>
-                  <li nz-menu-item (click)="onCreateMdDoc()">markdown</li>
-                  <li nz-menu-item (click)="onCreateHtmlDoc()">富文本</li>
+                  <li nz-menu-item (click)="onCreateMdDoc()">markdown文档</li>
+                  <li nz-menu-item (click)="onCreateHtmlDoc()">富文本文档</li>
                 </ul>
               </li>
               <li nz-menu-item>属性</li>
