--- a/src/app/my-components/MyModal/serch-note-modal/serch-note-modal.component.html
+++ b/src/app/my-components/MyModal/serch-note-modal/serch-note-modal.component.html
@@ -9,43 +9,49 @@
 >
   <div *nzModalContent>
     <nz-input-group [nzSuffix]="suffixIcon" style="margin-bottom: 1rem">
-      <input type="text" nz-input [placeholder]="placeholder" [(ngModel)]="value" />
+      <input type="text" nz-input [placeholder]="placeholder" [(ngModel)]="value"/>
     </nz-input-group>
 
     <ng-template #suffixIcon>
       <i nz-icon nzType="search"></i>
     </ng-template>
 
-      <cdk-virtual-scroll-viewport itemSize="73" class="demo-infinite-container">
-        <nz-list>
-          <nz-list-item *cdkVirtualFor="let item of ds">
-            <nz-skeleton *ngIf="!item" [nzAvatar]="true" [nzParagraph]="{ rows: 1 }"></nz-skeleton>
-            <nz-list-item-meta
-              *ngIf="item"
-              nzAvatar="./assets/tmp/avatar/avatar01.png"
-              [nzDescription]="item.email"
-            >
-              <nz-list-item-meta-title>
-                <a href="https://ng.ant.design">{{ item.name.last }}</a>
-              </nz-list-item-meta-title>
+    <cdk-virtual-scroll-viewport itemSize="73" class="demo-infinite-container">
+      <nz-list>
+        <nz-list-item *cdkVirtualFor="let item of ds">
+          <nz-skeleton *ngIf="!item" [nzAvatar]="true" [nzParagraph]="{ rows: 1 }"></nz-skeleton>
+          <nz-list-item-meta
+            *ngIf="item"
+            nzAvatar="./assets/tmp/avatar/avatar01.png"
+            [nzDescription]="item.email"
+          >
+            <nz-list-item-meta-title>
+              <a href="https://ng.ant.design">{{ item.name.last }}</a>
+            </nz-list-item-meta-title>
 
-            </nz-list-item-meta>
+          </nz-list-item-meta>
 
-            <ul nz-list-item-actions>
-              <nz-list-item-action>
-                <a (click)="nzMessage.info('引用')">插入文章地址</a>
-              </nz-list-item-action>
+          <ul nz-list-item-actions>
+            <nz-list-item-action>
+              <a nz-dropdown [nzDropdownMenu]="menu">
+                操作
+                <i nz-icon nzType="down"></i>
+              </a>
+              <nz-dropdown-menu #menu="nzDropdownMenu">
+                <ul nz-menu nzSelectable>
+                  <li nz-menu-item>复制引用</li>
+                  <li nz-menu-item>插入引用</li>
+                  <li nz-menu-item>预览文章</li>
+                  <li nz-menu-item>打开文章</li>
+                </ul>
+              </nz-dropdown-menu>
 
-              <nz-list-item-action>
-                <a (click)="nzMessage.info('编辑')">打开</a>
-                <a (click)="nzMessage.info('编辑')">打开</a>
+            </nz-list-item-action>
+          </ul>
+        </nz-list-item>
 
-              </nz-list-item-action>
-            </ul>
-          </nz-list-item>
-
-        </nz-list>
-      </cdk-virtual-scroll-viewport>
+      </nz-list>
+    </cdk-virtual-scroll-viewport>
 
   </div>
 </nz-modal>
